--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,12 @@
 {
     "name": "osw3/odyssey-discovery",
     "description": "A simple Micro Framework",
-    "keywords": ["framework"],
-    "version": "1.1",
+    "keywords": [
+        "framework",
+        "odyssey"
+    ],
+    "homepage": "https://github.com/osw3/odyssey-discovery",
+    "version": "0.1",
     "type": "library",
     "license": "MIT",
     "minimum-stability": "dev",
@@ -13,6 +17,7 @@
         }
     ],
     "require": {
+        "php": "^7.1.3",
         "altorouter/altorouter": "^1.2",
         "league/plates": "^3.3",
         "ircmaxell/random-lib": "^1.2",
