--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "type": "library",
     "license": "MIT",
     "version": "1.0.0",
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "authors": [
         {
             "name": "Arnaud BODEL",
