--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,20 @@
 {
     "name": "osw3/odyssey-discovery",
-    "description": "A simple Micro Framework",
-    "keywords": [
-        "framework",
-        "odyssey"
-    ],
-    "homepage": "https://github.com/osw3/odyssey-discovery",
     "type": "library",
-    "license": "MIT",
+    "description": "A simple Micro Framework",
     "version": "1.0.0",
-    "minimum-stability": "dev",
-    "prefer-stable": true,
+    "keywords": ["framework"],
+    "homepage": "https://github.com/osw3/odyssey-discovery",
+    "license": "MIT",
     "authors": [
         {
             "name": "Arnaud BODEL",
             "email": "contact@osw3.net"
         }
     ],
+    "support": {
+        "doc": "http://odyssey.osw3.net/"
+    },
     "require": {
         "php": "^7.1.3",
         "altorouter/altorouter": "^1.2",
@@ -38,6 +36,8 @@
             "odyssey/globals.php"
         ]
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "extra": {
         "branch-alias": {
             "dev-master": "1.0.0"
