--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     },
     "require": {
         "php": "^7.1.3",
+        "osw3/osw3/odyssey-discovery":"dev-master@dev",
         "altorouter/altorouter": "^1.2",
         "league/plates": "^3.3",
         "ircmaxell/random-lib": "^1.2",
@@ -47,5 +48,11 @@
                 "app/resources/public/assets/fonts/DeadIsland": "web/assets/fonts/DeadIsland"
             }
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/osw3/odyssey-discovery"
+        }
+    ]
 }
