--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "require": {
         "php": "^7.1.3",
-        "osw3/osw3/odyssey-discovery":"dev-master@dev",
+        "osw3/odyssey-discovery":"dev-master@dev",
         "altorouter/altorouter": "^1.2",
         "league/plates": "^3.3",
         "ircmaxell/random-lib": "^1.2",
