--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
             "": "src/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "extra": {
         "somework/composer-symlinks": {
