--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,10 @@
         "doc": "http://odyssey.osw3.net/"
     },
     "require": {
-        "osw3/odyssey-core-php": "*"
+        "osw3/odyssey-core-php": "*",
+        "cocur/slugify": "^3.1",
+        "ramsey/uuid": "^3.7.3",
+        "somework/composer-symlinks": "^1.3"
     },
     "autoload": {
         "psr-4": {
